--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         <header>
             A C T I O N &nbsp; A P P
         </header>
-        <main>
-            <div class="todo-container">
+        <main id="main">
+            <div class="todo-container" id="todo-container">
                 <div class="todo-header">
-                    My Todo List
+                    <h3 id="todo-header-text">My Todo List</h3>
+                    <button id="todo-fullscreen-button"><img src="images/fullscreen.svg" id="todo-fullscreen-icon"></button>
                 </div>
                 <div class="todo-body" id="todo-body">
                     <h2 id="todays-tasks-header">Todays Problem</h2>
