--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            A C T I O N &nbsp; A P P
+            A C T I O N &nbsp; A P 
         </header>
         <main id="main">
             <div class="todo-container" id="todo-container">
