--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                           </div>
                         </div>
                         <div class="weekdays">
-                          <div>Sun</div>
+                          <div>Su</div>
                           <div>Mon</div>
                           <div>Tue</div>
                           <div>Wed</div>
