Added dragging for new task

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         </header>
         <main id="main">
             <div class="new-task" id="new-task">
-                <p id="new-task-header">Create New Task</p>
+                <div id="new-task-header">
+                    <p>Create New Task</p>
+                    <button id="new-task-exit-button">X</button>
+                </div>
                 <form id="new-task-form">
                     <input class="new-task-input" id="new-task-name" type="text" placeholder="Task Name" required>
                     <input class="new-task-input" id="new-task-date" type="date" placeholder="mm/dd/yy">
