--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
                 <form id="new-task-form">
                     <input class="new-task-input" id="new-task-name" type="text" placeholder="Task Name" required>
-                    <input class="new-task-input" id="new-task-date" type="date" placeholder="mm/dd/yy">
+                    <input class="new-task-input" id="new-task-date" type="date">
                     <textarea class="new-task-input" id="new-task-description" placeholder="Task Description"></textarea>
                     <button id="new-task-button">Add New Task</button>
                 </form>
