--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
     </head>
     <body>
         <header>
+            <div></div>
             A C T I O N &nbsp; A P P
+            <div class="">
+                <div>
+                Sign Up
+                </div>
+                <div>
+                <a href=login.html>Login In</a>
+                </div>
+            </div>
         </header>
         <main id="main">
             <div class="new-task" id="new-task">
