--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="html">
     <head>
         <title>Action App Login</title>
         <meta charset="UTF-8">
@@ -8,10 +8,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     </head>
     <body>
+        <h1 id="heading">Welcome to Action App</h1>
         <main>
             <div id="login-container">
                 <div id="login-header">
-                    Login
+                    Sign in 
                 </div>
                 <form id="login-form">
                     <input id="username-input" type="text" placeholder="Username" required>
