--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                     </div>
                 </div>
                 <div class="todo-body" id="todo-body">
-                    <h2 id="todays-tasks-header">Todays Problem</h2>
+                    <h2 id="todays-tasks-header">Today's Tasks </h2>
                     <div id="todays-tasks">
                         
                     </div>
-                    <h2 id="tomorrows-tasks-header">Tomorrows Problem</h2>
+                    <h2 id="tomorrows-tasks-header">Things I should do</h2>
                     <div id="tomorrows-tasks">
                         
                     </div>
@@ -84,7 +84,8 @@
                     </div>
                     <div class="points-booking">
                         <div class="points">
-                            Points
+                            Weekly Points
+                            <h2 id="pointnumbers">0</h2>
                         </div>
                         <div class="booking">
                             Booking
