--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, intital-scale=1.0">
         <title>Action App Home</title>
         <link rel="stylesheet" href="styles/general.css">
         <link rel="stylesheet" href="styles/todo.css">
