--- a/index.html
+++ b/index.html
@@ -76,8 +76,29 @@
                       </div>
                 </div>
                 <div class="smaller-info-container">
-                    <div class="networking">
-                        Networking
+                    <div class="notes">
+                        <div id="notes-header">
+                            <div></div>
+                            <div>Notes</div>
+                            <div id="add-new-note">+</div>
+                        </div>
+                        <div id="notes-body">
+                            <div id="note1" class="note">
+                                <div class="note-title">
+                                    Test
+                                </div>
+                                
+                                <div class="note-date">
+                                    1-31-2025
+                                </div>
+                                <div class="note-firstline">
+                                    Hello ...
+                                </div>
+                            </div>
+                            <div id="note2" class="note">
+                                Test
+                            </div>
+                        </div>
                     </div>
                     <div class="points-booking">
                         <div class="points">
