--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Action App Home</title>
+        <title>Action App</title>
         <link rel="stylesheet" href="styles/general.css">
         <link rel="stylesheet" href="styles/todo.css">
         <link rel="stylesheet" href="styles/info.css">
