--- a/index.html
+++ b/index.html
@@ -85,14 +85,15 @@
                         <div id="notes-body">
                             <div id="note1" class="note">
                                 <div class="note-title">
-                                    Test
+                                    Test Note
                                 </div>
-                                
-                                <div class="note-date">
-                                    1-31-2025
-                                </div>
-                                <div class="note-firstline">
-                                    Hello ...
+                                <div class="note-info-container">
+                                    <div class="note-date">
+                                        1-31-2025
+                                    </div>
+                                    <div class="note-firstline">
+                                        This a test of the note preview...
+                                    </div>
                                 </div>
                             </div>
                             <div id="note2" class="note">
