beginning to implement notes

--- a/index.html
+++ b/index.html
@@ -96,9 +96,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <div id="note2" class="note">
-                                Test
-                            </div>
                         </div>
                     </div>
                     <div class="points-booking">
@@ -115,5 +112,6 @@
         </main>
         <script src="todo.js"></script>
         <script src="calendar.js"></script>
+        <script src="notes.js"></script>
     </body>
 </html>
