--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Action App</title>
+        <link rel="icon" 
+         type="image/png" 
+        href="Action-logo.png">
         <link rel="stylesheet" href="styles/general.css">
         <link rel="stylesheet" href="styles/todo.css">
         <link rel="stylesheet" href="styles/info.css">
