--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div id="notes-header">
                             <div></div>
                             <div>Notes</div>
-                            <div id="add-new-note">+</div>
+                            <div id="add-new-note" class="add-new-note">+</div>
                         </div>
                         <div id="notes-body">
                             <div id="note1" class="note">
