more phone updates

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             
         </header>
         <main id="main">
+            <div class="points-phone">
+                <h2>Weekly Points: </h2>
+                <h2 id="pointnumbers">0</h2>
+            </div>
             <div class="new-task" id="new-task">
                 <div id="new-task-header">
                     <p>Create New Task</p>
@@ -93,6 +97,16 @@
                         </div>
                         <div class="booking">
                             Booking
+                        </div>
+                    </div>
+                    <div class="phone-booking">
+                        <div class="phone-booking-header">Booking</div>
+                        <div class="phone-booking-gird">
+                        <img src="images/Microsoft_Office_Teams_Logo.svg">
+                        <img src="images/linkedin.png">
+                        <img src="images/Gmail_icon_(2020).svg">
+                        <img src="images/Microsoft_Office_Outlook_(2018–present).svg">
+                        <img src="images/Zoom-Logo (1).png">
                         </div>
                     </div>
                 </div>
