Even more phone updates

--- a/index.html
+++ b/index.html
@@ -96,7 +96,12 @@
                             <h2 id="pointnumbers">0</h2>
                         </div>
                         <div class="booking">
-                            Booking
+                            <div class="booking-header">Booking</div>
+                            <img src="images/Microsoft_Office_Teams_Logo.svg">
+                            <img src="images/linkedin.png">
+                            <img src="images/Gmail_icon_(2020).svg">
+                            <img src="images/Microsoft_Office_Outlook_(2018–present).svg">
+                            <img src="images/Zoom-Logo (1).png">
                         </div>
                     </div>
                     <div class="phone-booking">
