--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <h2 id="pointnumbers">0</h2>
                         </div>
                         <div class="booking">
-                            <div class="booking-header">Booking</div>
+                            <div class="booking-header">Quick Links</div>
                             <img src="images/Microsoft_Office_Teams_Logo.svg">
                             <img src="images/linkedin.png">
                             <img src="images/Gmail_icon_(2020).svg">
