--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         </div>
                     </div>
                     <div class="phone-booking">
-                        <div class="phone-booking-header">Booking</div>
+                        <div class="phone-booking-header">Quick Links</div>
                         <div class="phone-booking-gird">
                         <img src="images/Microsoft_Office_Teams_Logo.svg">
                         <img src="images/linkedin.png">
