--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="notes">
                         <div id="notes-header">
                             <div></div>
-                            <div>Notes</div>
+                            <div class="notes-main-title">Notes</div>
                             <div id="add-new-note" class="add-new-note">+</div>
                         </div>
                         <div id="notes-body">
@@ -97,22 +97,32 @@
                         </div>
                         <div class="booking">
                             <div class="booking-header">Quick Links</div>
-                            <img src="images/Microsoft_Office_Teams_Logo.svg">
-                            <img src="images/linkedin.png">
-                            <img src="images/Gmail_icon_(2020).svg">
-                            <img src="images/Microsoft_Office_Outlook_(2018–present).svg">
-                            <img src="images/Zoom-Logo (1).png">
+                            <a href="https://www.microsoft.com/en-us/microsoft-teams/group-chat-software">
+                                <img src="images/Microsoft_Office_Teams_Logo.svg"></a>
+                                <a href="https://www.linkedin.com/">
+                                <img src="images/linkedin.png"></a>
+                                <a href="https://mail.google.com/mail/">
+                                <img src="images/Gmail_icon_(2020).svg"></a>
+                                <a href="https://www.microsoft.com/en-us/microsoft-365/outlook/log-in">
+                                <img src="images/Microsoft_Office_Outlook_(2018–present).svg"></a>
+                                <a href="https://zoom.us/signin#/login">
+                                <img src="images/Zoom-Logo (1).png"></a>
                         </div>
                     </div>
                     <div class="phone-booking">
                         <div class="phone-booking-header">Quick Links</div>
                         <div class="phone-booking-gird">
-                        <img src="images/Microsoft_Office_Teams_Logo.svg">
-                        <img src="images/linkedin.png">
-                        <img src="images/Gmail_icon_(2020).svg">
-                        <img src="images/Microsoft_Office_Outlook_(2018–present).svg">
-                        <img src="images/Zoom-Logo (1).png">
-                        </div>
+                            <a href="https://www.microsoft.com/en-us/microsoft-teams/group-chat-software">
+                                <img src="images/Microsoft_Office_Teams_Logo.svg"></a>
+                            <a href="https://www.linkedin.com/">
+                                <img src="images/linkedin.png"></a>
+                            <a href="https://mail.google.com/mail/">
+                                <img src="images/Gmail_icon_(2020).svg"></a>
+                            <a href="https://www.microsoft.com/en-us/microsoft-365/outlook/log-in">
+                                <img src="images/Microsoft_Office_Outlook_(2018–present).svg"></a>
+                            <a href="https://zoom.us/signin#/login">
+                                <img src="images/Zoom-Logo (1).png"></a>
+                            </div>
                     </div>
                 </div>
             </div>
