--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Action App</title>
+        <link rel="manifest" href="/manifest.json">
         <link rel="icon" type="image/png" href="images/Action-logo.png">
         <link rel="stylesheet" href="styles/general.css">
         <link rel="stylesheet" href="styles/todo.css">
@@ -127,7 +128,7 @@
                 </div>
             </div>
         </main>
-        <script src="todo.js"></script>
+        <script src="todo.js" type="module"></script>
         <script src="calendar.js"></script>
         <script src="notes.js"></script>
     </body>
