--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 </div>
             </div>
         </main>
-        <script src="todo.js" type="module"></script>
+        <script src="todo.js"></script>
         <script src="calendar.js"></script>
         <script src="notes.js"></script>
     </body>
