--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                 </div>
             </div>
         </main>
+        <script src="app.js"></script>
         <script src="todo.js"></script>
         <script src="calendar.js"></script>
         <script src="notes.js"></script>
