--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Action App</title>
         <link rel="manifest" href="/manifest.json">
-        <link rel="icon" type="image/png" href="images/Action-logo.png">
+        <meta name="theme-color" content="#151633">
         <link rel="stylesheet" href="styles/general.css">
         <link rel="stylesheet" href="styles/todo.css">
         <link rel="stylesheet" href="styles/info.css">
