--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <header>
             <div></div>
             A C T I O N &nbsp; A P P
-            <button id="install-btn" style="display:none;">Install App</button>
         
             <div class="">
             
@@ -39,6 +38,9 @@
                     <textarea class="new-task-input" id="new-task-description" placeholder="Task Description"></textarea>
                     <button id="new-task-button">Add New Task</button>
                 </form>
+            </div>
+            <div style = "color: black;">
+                <button id="install-btn" style="display:none;">Install App</button>
             </div>
             <div class="todo-container" id="todo-container">
                 <div class="todo-header">
