--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 <h2>Weekly Points: </h2>
                 <h2 id="pointnumbers">0</h2>
             </div>
+            <div class="install">
+  <button class="install-button">Click Me</button>
+  <div class="install-notes">Your Notes Here</div>
+</div>
             <div class="new-task" id="new-task">
                 <div id="new-task-header">
                     <p>Create New Task</p>
@@ -38,9 +42,6 @@
                     <textarea class="new-task-input" id="new-task-description" placeholder="Task Description"></textarea>
                     <button id="new-task-button">Add New Task</button>
                 </form>
-            </div>
-            <div style = "color: black;">
-                <button id="install-btn" style="display:none;">Install App</button>
             </div>
             <div class="todo-container" id="todo-container">
                 <div class="todo-header">
