--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
                 <h2>Weekly Points: </h2>
                 <h2 id="pointnumbers">0</h2>
             </div>
+
             <div class="install">
-  <button class="install-button">Click Me</button>
-  <div class="install-notes">Your Notes Here</div>
-</div>
+                <button id="install-btn" class="install-button">Install App</button>
+                <div class="install-notes">Add this app to your home screen</div>
+            </div>
+            
             <div class="new-task" id="new-task">
                 <div id="new-task-header">
                     <p>Create New Task</p>
