--- a/index.html
+++ b/index.html
@@ -28,11 +28,20 @@
                 <h2 id="pointnumbers">0</h2>
             </div>
 
+          
             <div class="install">
-                <button id="install-btn" class="install-button">Install App</button>
-                <div class="install-notes">Add this app to your home screen</div>
+            <div class="install-header">Install Action App</div>
+            <div class="install-notes">Choose your installation method</div>
+            <div class="install-buttons">
+                <button id="install-btn" class="install-button">Install (Standard)</button>
+                <button id="shortcut-btn" class="install-button shortcut-btn">Use Shortcuts</button>
             </div>
-            
+            <div class="shortcut-info">
+                <button id="copy-url-btn" class="copy-button">Copy URL</button>
+            <div class="shortcut-info-text">Using Shortcuts method requires copying the app URL</div>
+            </div>
+            </div>
+
             <div class="new-task" id="new-task">
                 <div id="new-task-header">
                     <p>Create New Task</p>
