--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
             </div>
             <div class="shortcut-info">
                 <button id="copy-url-btn" class="copy-button">Copy URL</button>
-            <div class="shortcut-info-text">Using Shortcuts method requires copying the app URL</div>
-            </div>
+                <div class="app-icon-container">
+                  <img src="images/Action-logo.png" alt="Action App Icon" class="app-icon" id="app-icon">
+                  <span class="save-hint">Tap & hold to save</span>
+                </div>
+                <div class="shortcut-info-text">Using Shortcuts method requires copying the app URL</div>
+              </div>
             </div>
 
             <div class="new-task" id="new-task">
