--- a/index.html
+++ b/index.html
@@ -30,21 +30,22 @@
 
           
             <div class="install">
-            <div class="install-header">Install Action App</div>
-            <div class="install-notes">Choose your installation method</div>
-            <div class="install-buttons">
-                <button id="install-btn" class="install-button">Install (Standard)</button>
-                <button id="shortcut-btn" class="install-button shortcut-btn">Use Shortcuts</button>
-            </div>
-            <div class="shortcut-info">
-                <button id="copy-url-btn" class="copy-button">Copy URL</button>
-                <div class="app-icon-container">
-                  <img src="images/Action-logo.png" alt="Action App Icon" class="app-icon" id="app-icon">
-                  <span class="save-hint">Tap & hold to save</span>
+                <div class="install-header">Install Action App</div>
+                <div class="install-notes">Choose your installation method</div>
+                <div class="install-buttons">
+                  <button id="install-btn" class="install-button">Install (Standard)</button>
+                  <button id="shortcut-btn" class="install-button shortcut-btn">Use Shortcuts</button>
                 </div>
-                <div class="shortcut-info-text">Using Shortcuts method requires copying the app URL</div>
+                <div class="shortcut-info">
+                  <button id="copy-url-btn" class="copy-button">Copy URL</button>
+                  <div class="app-icon-container">
+                    <img src="images/Action-logo.png" alt="Action App Icon" class="app-icon" id="app-icon">
+                    <span class="save-hint">Tap & hold to save</span>
+                  </div>
+                  <div class="shortcut-info-text">Using Shortcuts method requires copying the app URL</div>
+                </div>
+                <button id="done-button" class="done-button">I'm Done</button>
               </div>
-            </div>
 
             <div class="new-task" id="new-task">
                 <div id="new-task-header">
