--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   <button id="shortcut-btn" class="install-button shortcut-btn">Use Shortcuts</button>
                 </div>
                 <div class="shortcut-info">
-                  <button id="copy-url-btn" class="copy-button">Copy URL</button>
+                  <button id="copy-url-btn" class="copy-button">Copy the URL from the address bar above</button>
                   <div class="app-icon-container">
                     <img src="images/Action-logo.png" alt="Action App Icon" class="app-icon" id="app-icon">
                     <span class="save-hint">Tap & hold to save</span>
